2009-09-11  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Use full path to xcent. Fix typo in
	  codesign args. Refuse to build if bundle ID isn't set.

2009-09-11  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Mkae build as failed if there's an
	  exception in package build. Fix a string format index.

2009-09-11  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneExecutionHandler.cs: Show errors from the mtouch
	  process after launching apps.

2009-09-11  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Fix a couple of minor bugs in dist
	  build.

2009-09-11  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Fix app ID validity checking. Make
	  sure remains marked as needs building if signing fails.

2009-09-11  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Warn when codesigning is disabled.

	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.IPhone.Gui.IPhoneSigningKeyPanelWidget.cs:
	  Disable signing GUI for sim.

	* Gui/IPhoneSigningKeyPanel.cs: Disable signing GUI for sim.
	  Only show device configs.

2009-09-10  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProject.cs: Enable signing on new iphone configs.

2009-09-10  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Write codesign args to log.

2009-09-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: Escape markup for text
	  renderer.

	* IPhoneBuildExtension.cs: If using the automatic dist cert,
	  try to resolve the correct key for the selected provisioning
	  profile.

2009-09-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: Trim names. Auto-select
	  profile when identity changed. Only show dist provisioning
	  profiles for the auto identity.

2009-09-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: Handle the Distribution