@@ -1,3 +1,9 @@
+2009-09-12  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* IPhoneBuildExtension.cs: Copy resource rules from SDK
+	instead of hardcoding them. Copy resource rules when building
+	with dev cert.
+
 2009-09-11  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* IPhoneBuildExtension.cs: Use full path to xcent. Fix typo in
